--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".pages.PetMountDetailActivity" />
         <activity android:name=".pages.ImageViewerActivity" />
         <activity android:name=".pages.ExploreActivity" />
-        <activity android:name=".pages.ExploreDetailActivity"></activity>
+        <activity android:name=".pages.ExploreDetailActivity" />
+        <activity android:name=".pages.MusicActivity"></activity>
     </application>
 
 </manifest>
