--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".Main2Activity"
             android:label="@string/app_name">
@@ -24,7 +25,8 @@
             android:name=".pages.PageHuntHotMap"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".pages.TestActivity" />
-        <activity android:name=".pages.PetsMountsActivity" />
+        <activity android:name=".pages.PetsActivity" />
+        <activity android:name=".pages.MountsActivity" />
         <activity android:name=".pages.PetMountDetailActivity" />
         <activity android:name=".pages.ImageViewerActivity" />
         <activity android:name=".pages.ExploreActivity" />
