filter hunt map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,16 +30,16 @@
         <activity android:name=".pages.PetMountDetailActivity" />
         <activity android:name=".pages.ImageViewerActivity" />
         <activity android:name=".pages.ExploreActivity" />
-        <activity android:name=".pages.ExploreDetailActivity" />
+        <activity android:name=".pages.ExploreDetailActivity" android:parentActivityName=".pages.ExploreActivity"/>
         <activity android:name=".pages.MusicActivity" />
         <activity android:name=".pages.DungeonsActivity" />
         <activity
             android:name=".pages.DungeonDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".pages.BlueMagicActivity" />
-        <activity android:name=".pages.BlueMagicDetailActivity" />
+        <activity android:name=".pages.BlueMagicDetailActivity" android:parentActivityName=".pages.BlueMagicActivity"/>
         <activity android:name=".pages.WindActivity"/>
-        <activity android:name=".pages.WindDetailActivity" />
+        <activity android:name=".pages.WindDetailActivity" android:parentActivityName=".pages.WindActivity"/>
     </application>
 
 </manifest>
