--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".pages.WeatherActivity"></activity>
+        <activity android:name=".weather.WeatherActivity"></activity>
         <activity
             android:name=".Main2Activity"
             android:label="@string/app_name">
